classDiagram
    direction BT
    class FachadaAplicacion {
        + autenticar(String, String) boolean
        + main(String[]) void
        + cambiarIdioma(EnumIdioma) void
        - extraerDatosPorDefecto() void
        + buscarRutaPorNombres(String, String) Ruta
        + actualizarUsuario(String, String, String, int) void
        - lanzaInterfazGrafica() void
        + relanzarGUI() void
        + obtenerCirculacionesRuta(Ruta, LocalDate) List
        String usrCorreo
        String usrDireccion
        ResourceBundle bundleInstance
        List~Estacion~ estaciones
        String usrNombre
        int usrTelefono
        int usrDni
    }
    class FachadaGui {
        + ponerEnMarcha() void
        + ponerEnMarchaNoAuth() void
    }
    class FormularioAutenticacion {
        - comprobarTeclaPulsada(KeyEvent) boolean
        - comprobarAutenticacion() void
    }
    class FormularioConfiguracion {
        + main(String[]) void
        - inicializarFormularioConfiguracion() void
    }
    class FormularioMiUsuario {
        - inicializarFormularioMiUsuario() void
        - actualizarComponentesObsoletos() void
        - gestionarModificarYGuardar(int) void
    }
    class FormularioPrincipal {
        + main(String[]) void
        - lanzarFormulario() void
    }
    class FormularioReservarTren {
        - establecerCirculaciones(Ruta, LocalDateTime) void
        - desplegarVentana(Ruta, LocalDateTime) void
        + tablaTrenesRuta() JTable
        + main(String[]) void
    }
    class ModeloDesplegableUbicacion {
        - Estacion selectedItem
        + addUbicaciones(Set~Estacion~) void
        + removeListDataListener(ListDataListener) void
        + clone() ModeloDesplegableUbicacion
        - triggerRefresh() void
        + addListDataListener(ListDataListener) void
        + addUbicaciones(List~Estacion~) void
        + getElementAt(int) String
        + addUbicacion(Estacion) void
        + addUbicacion(String) void
        Estacion selectedUbicacion
        Object? selectedItem
        int size
    }
    class ModeloTablaCirculaciones {
        - List~Circulacion~ listaCirculaciones
        + getValueAt(int, int) Object
        + addCirculacion(Circulacion) void
        int columnCount
        List~Circulacion~ listaCirculaciones
        int rowCount
    }

    FachadaAplicacion "1" *--> "fgui 1" FachadaGui
    FachadaGui "1" *--> "fa 1" FachadaAplicacion
    FachadaGui "1" *--> "vp 1" FormularioPrincipal
    FormularioAutenticacion "1" *--> "fa 1" FachadaAplicacion
    FormularioConfiguracion "1" *--> "fa 1" FachadaAplicacion
    FormularioMiUsuario "1" *--> "fa 1" FachadaAplicacion
    FormularioPrincipal "1" *--> "fa 1" FachadaAplicacion
    FormularioReservarTren "1" *--> "fa 1" FachadaAplicacion
